tests/algorithms/x/Java/computer_vision/haralick_descriptors.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden114_haralick_descriptors2336820248/001/Main.java:144: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(descriptors, idx)));
                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
